Strings exercise 1 complete

--- a/Fundamentals 2/strings1-download.html
+++ b/Fundamentals 2/strings1-download.html
@@ -28,7 +28,9 @@
   <script>
     // Add your code here
 
-    let quoteStart = 'Don't judge each day by the harvest you reap ';
+    let quoteStart = "Don't judge each day by the harvest you reap";
+    let quoteEnd=",but by the seeds you plant";
+    let finalQuote=quoteStart+quoteEnd;
 
     // Don't edit the code below here!
 
