--- a/Fundamentals 2/strings2-download.html
+++ b/Fundamentals 2/strings2-download.html
@@ -31,6 +31,10 @@
 
     // Add your code here
 
+    let quoteLength=quote.length;
+    let index=quote.indexOf(substring);
+
+    let revisedQuote=quote.slice(0,(index+substring.length));
     // Don't edit the code below here!
 
     const section = document.querySelector('section');
