--- a/Fundamentals 2/strings3-download.html
+++ b/Fundamentals 2/strings3-download.html
@@ -29,6 +29,9 @@
     let quote = 'I dO nOT lIke gREen eGgS anD HAM';
 
     // Add your code here
+    let fix1=quote.slice(1,quote.indexOf('g'));
+    let fixedQuote= "I" + fix1.toLowerCase()+'blue eggs & green ham';
+    let finalQuote=fixedQuote+'.';
 
     // Don't edit the code below here!
 
