--- a/Fundamentals 2/strings4-download.html
+++ b/Fundamentals 2/strings4-download.html
@@ -31,8 +31,7 @@
     let a = 5;
     let b = 8;
 
-    let myString = 'Using *, we can work out that that if the two shortest sides of a right-angled triangle have lengths of * and *, the length of the hypotenuse is *.';
-
+    let myString = `Using ${theorem}, we can work out that that if the two shortest sides of a right-angled triangle have lengths of ${a} and ${b}, the length of the hypotenuse is ${a^2 +b^2}.`;
 
     // Don't edit the code below here!
 
