fix number of boxes problem

--- a/Etch-a-Sketch/index_final.html
+++ b/Etch-a-Sketch/index_final.html
@@ -24,17 +24,18 @@
     let gridSize=window.prompt('Please enter the number of squares per side you want your sketch grid to have.( P.S : if you put a large number just be patient 🦖 )')
   
     function sizeOfGrid(numberOfSquares){
+        
         //grid 
         let elem=document.querySelector('div');
-        for (let i=0;i<=numberOfSquares;i++){   
+        for (let i=0;i<numberOfSquares;i++){   
             let row=document.createElement('div'); 
             elem.appendChild(row);  
             row.style.cssText=`display:flex;flex-direction:row;height:${100/numberOfSquares}vh;`;  //1)create 16 rows
-            for (let j=0;j<=numberOfSquares;j++){                   //2) in each row display 16 boxes
+            for (let j=0;j<numberOfSquares;j++){                   //2) in each row display 16 boxes
             let div=document.createElement('div');
             div.className='box';
             row.appendChild(div);
-            div.style.cssText='width:100%;height:100%;';
+            div.style.cssText='border:2px solid black;width:100%;height:100%;';
             }
 
         }
@@ -49,14 +50,15 @@
         })
 
         }
+
         //create reset button
 
-     let resetButton= document.createElement('button');
-     resetButton.innerHTML='Reset';
-     let buttonPosition=document.getElementById('parentDiv');
-     buttonPosition.appendChild(resetButton);
-     resetButton.style.cssText='position:fixed;top:0%; padding:15px; color:black;';
-     resetButton.addEventListener('click',()=>{window.location.reload();} );
+       let resetButton= document.createElement('button');
+       resetButton.innerHTML='Reset';
+       let buttonPosition=document.getElementById('parentDiv');
+       buttonPosition.appendChild(resetButton);
+       resetButton.style.cssText='position:fixed;top:0%; padding:15px; color:black;';
+       resetButton.addEventListener('click',()=>{window.location.reload();} );
     }   
 
 
