--- a/Fundamentals 2/strings1-download.html
+++ b/Fundamentals 2/strings1-download.html
@@ -28,9 +28,9 @@
   <script>
     // Add your code here
 
-    let quoteStart = "Don't judge each day by the harvest you reap";
-    let quoteEnd=",but by the seeds you plant";
-    let finalQuote=quoteStart+quoteEnd;
+    const quoteStart = "Don't judge each day by the harvest you reap";
+    const quoteEnd = ",but by the seeds you plant";
+    const finalQuote = quoteStart + quoteEnd;
 
     // Don't edit the code below here!
 
