--- a/Statue-of-Transforms/index.html
+++ b/Statue-of-Transforms/index.html
@@ -27,6 +27,128 @@
             height: 120px;
         }
         /* SOLUTION: CODE STARTS HERE >> */
+        
+        #a2{
+            animation-name:transforma2;
+            animation-duration:1s;
+            animation-delay:1s;
+            animation-fill-mode: forwards;
+        }
+
+        @keyframes transforma2{
+            100%{transform: translate(0px,-120px);}
+
+        }
+
+        #a4{
+            animation-name:transforma4;
+            animation-duration:1s;
+            animation-delay:1s;
+            animation-fill-mode: forwards;
+        }
+
+        @keyframes transforma4{
+            100%{transform: translate(160px,calc(3*-120px));}
+
+        }
+        
+        #b2{
+            animation-name:transformb2;
+            animation-duration:1s;
+            animation-delay:1s;
+            animation-fill-mode: forwards;
+        }
+
+        @keyframes transformb2{
+            100%{transform:rotate(-180deg) translate(0px,-120px);}
+
+        }
+
+        #b3{
+            animation-name:transformb3;
+            animation-duration:1s;
+            animation-delay:1s;
+            animation-fill-mode: forwards;
+        }
+        @keyframes transformb3{
+            100%{transform:rotate(-180deg);}
+
+        }
+
+        #b4{
+            animation-name:transformb4;
+            animation-duration:1s;
+            animation-delay:1s;
+            animation-fill-mode: forwards;
+        }
+        @keyframes transformb4{
+            100%{transform:translateY(-120px);}
+
+        }
+
+        #c1{
+            animation-name:transformc1;
+            animation-duration:1s;
+            animation-delay:1s;
+            animation-fill-mode: forwards;
+        }
+        @keyframes transformc1{
+            100%{transform:translate(calc(3*-160px),120px);}
+
+        }
+
+        #c2{
+            animation-name:transformc2;
+            animation-duration:1s;
+            animation-delay:1s;
+            animation-fill-mode: forwards;
+        }
+        @keyframes transformc2{
+            100%{transform:translateX(160px);}
+
+        }
+        #c3{
+            animation-name:transformc3;
+            animation-duration:1s;
+            animation-delay:1s;
+            animation-fill-mode: forwards;
+        }
+        @keyframes transformc3{
+            100%{transform:translateX(160px);}
+
+        }
+        #c4{
+            animation-name:transformc4;
+            animation-duration:1s;
+            animation-delay:1s;
+            animation-fill-mode: forwards;
+        }
+        @keyframes transformc4{
+            100%{transform:translateX(160px);}
+
+        }
+
+
+        #d3{
+            animation-name:transformd3;
+            animation-duration:1s;
+            animation-delay:1s;
+            animation-fill-mode: forwards;
+        }
+        @keyframes transformd3{
+            100%{transform:translateX(-160px);}
+
+        }
+        #d4{
+            animation-name:transformd4;
+            animation-duration:1s;
+            animation-delay:1s;
+            animation-fill-mode: forwards;
+        }
+        @keyframes transformd4{
+            100%{transform:translateY(calc(3*120px));}
+
+        }
         /* << SOLUTION: CODE ENDS HERE */
     </style>
 </head>
